--- a/assets/hstyle.css
+++ b/assets/hstyle.css
@@ -1,19 +1,20 @@
+@font-face {
+   font-family: rozhaone;
+   src: url(./fonts/RozhaOne-Regular.ttf);
+}
+
+@font-face {
+   font-family: noto;
+   src: url(./fonts/NotoSans-Regular.ttf);
+}
+
+
 body {
   background-color:#17102E;
 }
 
-@font-face {
-  font-family: playfairdisplay;
-  src: url(./fonts/PlayfairDisplay-SemiBold.ttf)
-}
-
-@font-face {
-  font-family: lato;
-  src: url(./fonts/Lato-Regular.ttf)
-}
-
 h1 {
-  font-family: playfairdisplay;
+  font-family: rozhaone;
   color: #FFFFFF;
 }
 
@@ -41,12 +42,12 @@ p {
 }
 
 p {
-  font-family: lato;
+  font-family: noto;
   font-size: 20px
 }
 
 .bar {
-  font-family: lato;
+  font-family: noto;
   font-size:20px;
   color:#ffffff
 }
@@ -62,7 +63,7 @@ p {
 }
 
 .bart {
-  font-family: lato;
+  font-family: noto;
   font-size:15px;
   color:#ffffff
 }
