--- a/projects/Yurdle/css/style.css
+++ b/projects/Yurdle/css/style.css
@@ -14,7 +14,7 @@ input {
     box-shadow: inset 2px 5px 10px 0 rgba(0, 0, 0, 0.25);
     text-align: left;
     border: 1px solid #FFFFFF;
-    padding: 0.02vh;
+    padding: 42vw;
     border-radius: 8px;
 }
 
