--- a/projects/tasQer2/styles2.css
+++ b/projects/tasQer2/styles2.css
@@ -63,3 +63,11 @@ button[id^="complete"], button[id^="remove"] {
 p {
     color: #FFFFFF;
 }
+
+.row > button > span {
+    margin-top: 5px;
+}
+
+div[style*="line-through"] > p {
+    text-decoration: line-through white;
+}
