--- a/projects/tasQer/style.css
+++ b/projects/tasQer/style.css
@@ -1,43 +1,99 @@
-button {
-    background-color: lightgray;
-    border-color: #FFFFFF;
-    border: none;
-    border-radius: 8px;
-    padding: 3%;
+body {
+    background-color: #dadada;
 }
 
-button:hover {
-    background-color: dimgray;
-    border-color: #FFFFFF;
-    border-radius: 8px;
-    color: #ffffff;
+.container {
+    background: lightgray;
+    border-color: #4f4f4f;
+    border-style: solid;
+    border-width: 2px 2px 2px 2px;
 }
 
-.disabled {
-    opacity: 0.6;
-    cursor: not-allowed;
+a {
+    margin: 0;
+    padding: 0;
+    background-color: #8278f2;
+    text-align:center
 }
 
-button:disabled {
-    background-color: #D6d6d6;
-    border-color: #FFFFFF;
-    border-radius: 8px;
-    color: gray;
+h1 {
+    text-align: center;
+    font-family: IBM Plex Mono, monospace;
+    font-size: 300%;
+    margin-bottom: 0;
+    color:white;
+    background-color: #8783f7;
+}
+
+a > span {
+    text-align: center;
+    font-size: 400%;
+    color:black
+}
+
+a >span:hover {
+    text-decoration: underline black;
 }
 
 input {
-    border-radius: 8px;
-    border-color: gray;
+    border-radius: 0;
     border-style: solid;
-    border-width: 1px;
+    font-size: 120%;
+    border-color:#4f4f4f;
+    background-color: #e1e1e1;
+    border-width: 2px 0 0 2px
 }
 
-textarea {
-    border-radius: 8px;
-    border-color: gray;
-    border-style: solid;
+#taskIn {
+    border-width: 2px 0 0 0;
 }
 
-.nopad {
-    padding: 0px;
+h3 {
+    font-family: IBM Plex Mono, monospace;
+}
+
+button {
+    border-radius: 0;
+    border-style: solid;
+    font-size: 120%;
+    border-color:#4f4f4f;
+    background-color: #e1e1e1;
+    border-width: 2px 0 0 2px;
+}
+
+button[id^="complete"], button[id^="remove"] {
+    background-color: transparent;
+    border-width: 0;
+}
+
+#display {
+    min-height: 55vh;
+}
+
+.container > .row {
+    background-color: #e1e1e1;
+    margin: 0;
+}
+
+.row > .row {
+    margin:0;
+    padding: 0;
+}
+
+body > div > div > div.row.align-items-center.justify-content-center.px-2 > div.row.col-2 > button {
+    padding: 0;
+    border-width: 0;
+}
+
+#display > .row > .col-1 > button {
+    border-width: 0;
+    background-color: transparent;
+}
+
+div {
+    font-family: IBM Plex Mono, monospace;
+}
+
+#display {
+    padding: 2%;
 }
