--- a/projects/tasQer/dark.css
+++ b/projects/tasQer/dark.css
@@ -1,10 +1,10 @@
 body {
-    background-color: #dadada;
+    background-color: #212121;
 }
 
 .container {
-    background: lightgray;
-    border-color: #4f4f4f;
+    background: #282828;
+    border-color: lightgray;
     border-style: solid;
     border-width: 2px 2px 2px 2px;
 }
@@ -39,9 +39,10 @@ input {
     border-radius: 0;
     border-style: solid;
     font-size: 120%;
-    border-color:#4f4f4f;
-    background-color: #e1e1e1;
-    border-width: 2px 0 0 2px
+    border-color:#e1e1e1;
+    background-color: #141414;
+    border-width: 2px 0 0 2px;
+    color: white;
 }
 
 #taskIn {
@@ -50,14 +51,15 @@ input {
 
 h3 {
     font-family: IBM Plex Mono, monospace;
+    color: lightgray
 }
 
 button {
     border-radius: 0;
     border-style: solid;
     font-size: 120%;
-    border-color:#4f4f4f;
-    background-color: #e1e1e1;
+    border-color:#e1e1e1;
+    background-color: #141414;
     border-width: 2px 0 0 2px;
 }
 
@@ -71,7 +73,7 @@ button[id^="complete"], button[id^="remove"] {
 }
 
 .container > .row {
-    background-color: #e1e1e1;
+    background-color: #141414;
     margin: 0;
 }
 
@@ -96,4 +98,12 @@ div {
 
 #display {
     padding: 2%;
+}
+
+span {
+  color: white
+}
+
+p {
+  color:#e1e1e1
 }
